// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudies should render correctly 1`] = `
<div>
  <section
    class="case-studies"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-index"
        >
          
        Case 
          <!---->
          
        Studies
      
        </h2>
         
        <!---->
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_sjmc"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/sir-john-monash-centre/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="SJMC logo"
                height="60"
                src="img.jpg"
                width="133"
              />
               
              <span>
                BYOD
              </span>
               
              <h3>
                Sir John Monash Centre
              </h3>
               
              <p>
                Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
              </p>
               
              <nuxtlink
                to="/case-studies/sir-john-monash-centre/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_nambafood"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/namba-food/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Namba Food logo"
                height="80"
                src="img.jpg"
                width="108"
              />
               
              <span>
                Foodtech
              </span>
               
              <h3>
                Contactless Delivery Service
              </h3>
               
              <p>
                Mad Devs created the Namba Food delivery service from scratch. The solution orchestrates feature-rich apps for couriers, end-users, and business owners.
              </p>
               
              <nuxtlink
                to="/case-studies/namba-food/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_yourcast"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/yourcast/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Yourcast logo"
                height="25"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Content Streaming
              </span>
               
              <h3>
                The Evolution of Yourcast.TV
              </h3>
               
              <p>
                Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
              </p>
               
              <nuxtlink
                to="/case-studies/yourcast/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_godee"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/godee/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Godee logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Transportation
              </span>
               
              <h3>
                Convenient shuttle bus service
              </h3>
               
              <p>
                Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
              </p>
               
              <nuxtlink
                to="/case-studies/godee/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;

exports[`CaseStudies should render correctly with type=projects 1`] = `
<div>
  <section
    class="case-studies case-studies--projects"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-projects"
        >
          
        Case 
          <br />
          
        Studies
      
        </h2>
         
        <div
          class="case-studies__fire-icon"
        />
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_sjmc"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/sir-john-monash-centre/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="SJMC logo"
                height="60"
                src="img.jpg"
                width="133"
              />
               
              <span>
                BYOD
              </span>
               
              <h3>
                Sir John Monash Centre
              </h3>
               
              <p>
                Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
              </p>
               
              <nuxtlink
                to="/case-studies/sir-john-monash-centre/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_nambafood"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/namba-food/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Namba Food logo"
                height="80"
                src="img.jpg"
                width="108"
              />
               
              <span>
                Foodtech
              </span>
               
              <h3>
                Contactless Delivery Service
              </h3>
               
              <p>
                Mad Devs created the Namba Food delivery service from scratch. The solution orchestrates feature-rich apps for couriers, end-users, and business owners.
              </p>
               
              <nuxtlink
                to="/case-studies/namba-food/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_yourcast"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/yourcast/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Yourcast logo"
                height="25"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Content Streaming
              </span>
               
              <h3>
                The Evolution of Yourcast.TV
              </h3>
               
              <p>
                Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
              </p>
               
              <nuxtlink
                to="/case-studies/yourcast/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_godee"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/godee/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Godee logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Transportation
              </span>
               
              <h3>
                Convenient shuttle bus service
              </h3>
               
              <p>
                Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
              </p>
               
              <nuxtlink
                to="/case-studies/godee/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;
